# lottie-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
assets/: shader.wgsl
crates/ast/: Cargo.toml  README.md
crates/ast/src/: helpers.rs  lib.rs
crates/ast/tests/: basic.rs  bouncy_ball.json  unit.rs
crates/core/: Cargo.toml
crates/core/src/: animated.rs  error.rs  font.rs  layer.rs  lerp.rs  lib.rs  model.rs  prelude.rs  renderer.rs  timeline.rs  traits.rs
crates/core/src/layer/: frame.rs  hierarchy.rs  image.rs  media.rs  opacity.rs  precomposition.rs  shape.rs  staged.rs  text.rs
crates/core/src/model/: animated.rs  color.rs
crates/core/src/model/helpers/: convert.rs
crates/core/tests/: basic.rs  unit.rs
crates/lottie/: Cargo.toml  README.md
crates/lottie/src/: layer.rs  lerp.rs  lib.rs  model.rs  renderer.rs  timeline.rs
crates/lottie/src/layer/: hierarchy.rs  shape.rs  staged.rs  text.rs
crates/lottie/src/model/: animated.rs  helpers.rs
crates/lottie/src/model/helpers/: convert.rs  keyframe.rs
crates/lottie/tests/: basic.rs  unit.rs
crates/model/: Cargo.toml  README.md
crates/model/src/: color.rs  helpers.rs  lib.rs
crates/model/src/helpers/: convert.rs  keyframe.rs
crates/model/tests/: basic.rs  unit.rs
crates/player/: Cargo.toml  README.md
crates/player/assets/: gradient.wgsl  shader.wgsl
crates/player/src/: main.rs
crates/renderer-bevy/: Cargo.toml  README.md
crates/renderer-bevy/src/: asset.rs  bezier.rs  frame_capture.rs  gradient.rs  layer_container.rs  lens.rs  lib.rs  main.rs  material.rs  plugin.rs  render.rs  shape.rs  system.rs  tween.rs  utils.rs
crates/renderer-bevy/tests/: fixtures.rs
crates/renderer-notan/: Cargo.toml  README.md
crates/renderer-notan/src/: lib.rs
fixtures/: fractal.json  parenting.json
fixtures/segments/: stroke.json  text_range.json
fixtures/ui/: 7148-the-nyan-cat.json  delete.json  drink.json  font-url.json  lego_loader.json  material_wave_loading.json  matte.json  polystar.json  remapping.json  strokehold.json  techno_penguin.json  text_range.json
fixtures/ui/checked/NonAnimating/: BasicLayers.json
fixtures/ui/lottie-ios-samples/: README.md
fixtures/ui/simple/: matte.json
fixtures/unit/: animated_position_legacy.json
fixtures/unit/segments/: gradient_fill.json  transform_complex.json
fixtures/unit/simple/: auto_orient.json  image_and_sound.json
fixtures/unit/text/: font-local.json  text_range_letter_spacing.json
