[package]
edition = "2021"
name = "lottie-core"
version = "0.1.0"

[dependencies]
flo_curves = "0.6.1"
glam = "0.22.0"
lyon_path = "0.17.7"
slotmap = "1.0.6"
thiserror = "1.0.30"
fontkit = "0.3.0-beta.0" #{ path = "../../../font-toolkit" }
ureq = "2.4.0"
base64 = "0.13.0"
url = "2.2.2"
log = "0.4.17"

[dependencies.lottie-model]
path = "../model"

[target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
dirs = "4.0.0"
