[package]
edition = "2021"
name = "lottie"
version = "0.1.0"
description = "Bodymovin lottie file format parser and logic layer"
license = "MIT OR Apache-2.0"
authors = ["Zimon Tai <daizhuoxian@gmail.com>"]
categories = ["graphics", "rendering"]
keywords = ["lottie", "animation", "parser", "graphics", "bevy"]
readme = "README.md"
repository = "https://github.com/zimond/lottie-rs/"

[dependencies]
flo_curves = "0.7.2"
glam = "0.25.0"
lyon_path = "1.0.4"
slotmap = "1.0.6"
thiserror = "1.0.30"
fontkit = "0.5.0-beta.1"
ureq = "2.7.1"
base64 = "0.22.1"
url = "2.4.1"
log = "0.4.17"
euclid = "0.22.7"
serde_json = "1.0.79"
serde_repr = "0.1.7"
read_color = "1.0.0"
ordered-float = "4.2.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.136"


[dev-dependencies]
serde_path_to_error = "0.1.7"

[target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
dirs = "5.0.0"
