[package]
edition = "2021"
name = "lottie-player"
version = "0.1.0"

[dependencies]
# bevy-inspector-egui = "0.11.0"
# bevy_prototype_debug_lines = { git = "https://github.com/Toqozz/bevy_debug_lines" }


[dependencies.clap]
features = ["derive"]
version = "3.2.5"

[dependencies.lottie-core]
path = "../core"

[dependencies.lottie-renderer-bevy]
path = "../renderer-bevy"
