[package]
edition = "2021"
name = "lottie-player"
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
smol = "1.3.0"
webp-animation = "0.8.0"
# bevy-inspector-egui = "0.11.0"
# bevy_prototype_debug_lines = { git = "https://github.com/Toqozz/bevy_debug_lines" }


[dependencies.clap]
features = ["derive"]
version = "4.4.4"

[dependencies.lottie-core]
path = "../core"

[dependencies.lottie-renderer-bevy]
path = "../renderer-bevy"

[features]
default = ["debug"]
debug = ["lottie-renderer-bevy/egui"]
