[package]
edition = "2021"
name = "lottie-player"
version = "0.1.0"
description = "Bodymovin lottie file format player"
license = "MIT OR Apache-2.0"
authors = ["Zimon Tai <daizhuoxian@gmail.com>"]
categories = ["graphics", "rendering"]
keywords = ["lottie", "animation", "parser", "graphics", "bevy"]
readme = "README.md"
repository = "https://github.com/zimond/lottie-rs/"

[dependencies]
anyhow = "1.0.75"
smol = "2.0.0"
webp-animation = "0.9.0"
png = "0.17.10"
# bevy-inspector-egui = "0.11.0"
# bevy_prototype_debug_lines = { git = "https://github.com/Toqozz/bevy_debug_lines" }


[dependencies.clap]
features = ["derive"]
version = "4.4.4"

[dependencies.lottie]
path = "../lottie"
version = "0.1.0"

[dependencies.lottie-renderer-bevy]
path = "../renderer-bevy"
version = "0.1.0"

[features]
default = ["debug"]
debug = ["lottie-renderer-bevy/egui"]
