[package]
edition = "2021"
name = "lottie-renderer-bevy"
version = "0.1.0"

[dependencies]
# bevy_diagnostic = "0.7.0"
flo_curves = "0.6.1"
log = "0.4.17"
ordered-float = "3.0.0"
infer = "0.9.0"
bevy_egui = { version = "0.16.1", optional = true }
bevy = { version = "0.8.0", features = ["bevy_audio", "mp3", "flac", "wav"] }
wgpu = "0.13.1"
image = { version = "0.24.2", default-features = false, features = [ "png" ] }
webp-animation = "0.6.0"
bevy_tweening = { git = "https://github.com/zimond/bevy_tweening", rev = "1b3011c" }
lottie-core = { path = "../core" }
lyon = "0.17.10"
futures-intrusive = "0.4.0"
pollster = "0.2.5"
bevy-inspector-egui = { version = "0.13.0", optional = true }

[features]
default = ["egui"]
egui = ["bevy_egui", "bevy-inspector-egui"]
