[package]
edition = "2021"
name = "lottie-renderer-bevy"
version = "0.1.0"

[dependencies]
# bevy_diagnostic = "0.7.0"
flo_curves = "0.7.2"
log = "0.4.17"
ordered-float = "3.9.1"
infer = "0.15.0"
bevy_egui = { version = "0.21", optional = true }
bevy = { version = "0.11.2", features = ["bevy_audio", "mp3", "flac", "wav"] }
wgpu = "0.16.0"
image = { version = "0.24.2", default-features = false, features = ["png"] }
webp-animation = "0.8.0"
bevy_tweening = { git = "https://github.com/zimond/bevy_tweening", rev = "5f95a73" }
lottie-core = { path = "../core" }
lyon = "1.0.1"
futures-intrusive = "0.5.0"
pollster = "0.3.0"
bevy-inspector-egui = { version = "0.19", optional = true }

[features]
default = []
egui = ["bevy_egui", "bevy-inspector-egui"]
