[package]
edition = "2021"
name = "lottie-renderer-bevy"
version = "0.1.0"

[dependencies]
# bevy_diagnostic = "0.7.0"
flo_curves = "0.7.2"
log = "0.4.17"
ordered-float = "4.2.0"
infer = "0.15.0"
bevy_egui = { version = "0.27", optional = true }
bevy = { version = "0.13.2", features = ["bevy_audio", "mp3", "flac", "wav"] }
wgpu = "0.19.2"
image = { version = "0.25.1", default-features = false, features = ["png"] }
bevy_tweening = { git = "https://github.com/zimond/bevy_tweening", rev = "618a6f2" }
lottie-core = { path = "../core" }
lyon = "1.0.1"
bevy-inspector-egui = { version = "0.24", optional = true }
futures = "0.3.28"
event-listener = "5.3.0"

[dev-dependencies]
glob = "0.3.0"
png = "0.17.10"
rstest = "0.19.0"
smol = "2.0.0"

[features]
default = []
egui = ["bevy_egui", "bevy-inspector-egui"]
