[package]
name = "renderer-notan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lottie-core = { version = "0.1.0", path = "../core" }
notan = { git = "https://github.com/Nazariglez/notan", branch = "develop", version = "0.4.2" }
